--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@van-ons/block-editor",
-  "version": "1.0.0",
-  "description": "A standalone implementation of the WordPress Block Editor",
+  "name": "@oobi/block-editor",
+  "version": "2.0.0",
+  "description": "A standalone implementation of the WordPress Block Editor (Oobi fork)",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "keywords": [
@@ -10,7 +10,7 @@
     "gutenberg",
     "block-editor"
   ],
-  "author": "Maurice Wijnia",
+  "author": "Oobi (forked from Maurice Wijnia)",
   "license": "GPL-2.0-or-later",
   "types": "dist/index.d.ts",
   "files": [
@@ -27,18 +27,20 @@
     "build:ts": "tsc"
   },
   "dependencies": {
-    "@wordpress/api-fetch": "^6.6.0",
-    "@wordpress/base-styles": "^4.5.0",
-    "@wordpress/block-editor": "^9.1.0",
-    "@wordpress/block-library": "^7.6.0",
-    "@wordpress/blocks": "^11.8.0",
-    "@wordpress/components": "^19.11.0",
-    "@wordpress/data": "^6.9.0",
-    "@wordpress/element": "^4.7.0",
-    "@wordpress/format-library": "^3.7.0",
-    "@wordpress/hooks": "^3.9.0",
-    "@wordpress/keyboard-shortcuts": "^3.7.0",
-    "@wordpress/server-side-render": "^3.7.0",
+    "@wordpress/api-fetch": "^7.9.0",
+    "@wordpress/base-styles": "^5.9.0",
+    "@wordpress/block-editor": "^15.5.0",
+    "@wordpress/block-library": "^9.15.0",
+    "@wordpress/blocks": "^13.9.0",
+    "@wordpress/components": "^29.5.0",
+    "@wordpress/data": "^10.9.0",
+    "@wordpress/element": "^6.9.0",
+    "@wordpress/format-library": "^5.9.0",
+    "@wordpress/hooks": "^4.9.0",
+    "@wordpress/i18n": "^5.9.0",
+    "@wordpress/icons": "^10.9.0",
+    "@wordpress/keyboard-shortcuts": "^5.9.0",
+    "@wordpress/server-side-render": "^5.9.0",
     "axios": "^0.21.1",
     "uuid": "^8.3.2"
   },
@@ -46,11 +48,11 @@
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.1.4",
     "mini-css-extract-plugin": "^2.4.5",
-    "sass": "^1.43.4",
+    "sass": "^1.85.0",
     "sass-loader": "^12.3.0",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2",
-    "vite": "^2.9.9",
+    "typescript": "^5.7.0",
+    "vite": "^6.0.0",
     "webpack": "^5.64.2",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
@@ -58,15 +60,15 @@
     "webpack-merge": "^5.8.0"
   },
   "peerDependencies": {
-    "react": "~17.0.2",
-    "react-dom": "~17.0.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/VanOns/block-editor.git"
+    "url": "git+https://github.com/oobi/block-editor.git"
   },
   "bugs": {
-    "url": "https://github.com/VanOns/block-editor/issues"
+    "url": "https://github.com/oobi/block-editor/issues"
   },
-  "homepage": "https://github.com/VanOns/block-editor#readme"
+  "homepage": "https://github.com/oobi/block-editor#readme"
 }
