--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@wordpress/block-library": "^9.38.0",
     "@wordpress/blocks": "^15.11.0",
     "@wordpress/components": "^32.0.0",
+    "@wordpress/compose": "^7.38.0",
     "@wordpress/data": "^10.38.0",
     "@wordpress/element": "^6.38.0",
     "@wordpress/format-library": "^5.38.0",
