fix inserter default style

--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "watch": "npm run build:ts -- --watch & npm run build:sass -- --watch",
     "start": "vite playground",
     "prebuild": "npm run clean",
-    "build": "npm run build:ts && npm run build:sass",
+    "build": "npm run build:ts && npm run build:sass && npm run copy:css",
     "build:sass": "sass src/styles.scss dist/styles.css",
-    "build:ts": "tsc"
+    "build:ts": "tsc",
+    "copy:css": "cp src/content-overrides.css dist/"
   },
   "dependencies": {
     "@wordpress/api-fetch": "^7.38.0",
